tests/ui/g-route-roll-one-sided-observer.stderr
error[E0080]: evaluation panicked: receive lane sender change requires a causal handoff or exclusive route arms
 --> src/g.rs
  |
  |             panic_choreography_error(error);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::ProgramProjection::<hibana::g::Roll<hibana::g::Route<hibana::g::Send<0, 2, hibana::g::Msg<1, ()>>, hibana::g::Seq<hibana::g::Send<0, 2, hibana::g::Msg<2, ()>>, hibana::g::Send<1, 2, hibana::g::Msg<3, ()>>>>>, 32>::VALIDATION` failed inside this call
  |
note: inside `g::panic_choreography_error`
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: src/g.rs
  |
  |             panic!("receive lane sender change requires a causal handoff or exclusive route arms")
  |             -------------------------------------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g/role_projection.rs
  |
  |         let () = Self::VALIDATION;
  |                  ^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/g/role_projection.rs
  |
  |             &ProgramProjection::<Steps, CAPACITY>::PROGRAM_REF,
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/g/role_projection.rs
  |
  |     &RoleProjection::<ROLE, Steps, CAPACITY>::IMAGE_REF
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/g.rs
  |
  |       let image = const {
  |  _________________^
  | |         let required_rows = <Steps as ProgramShape>::SOURCE_ROW_COUNT;
  | |         if required_rows <= 8 {
  | |             role_projection::role_projection_image_for::<ROLE, Steps, 8>()
... |
  | |     };
  | |_____^

note: the above error was encountered while instantiating `fn g::project::<1, Roll<Route<hibana::g::Send<0, 2, Msg<1, ()>>, Seq<hibana::g::Send<0, 2, Msg<2, ()>>, hibana::g::Send<1, 2, Msg<3, ()>>>>>>`
 --> src/global/program.rs
  |
  |         crate::g::project(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^
